--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/typography": "^0.5.13",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
     "html2pdf.js": "^0.10.2",
     "lucide-react": "^0.412.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
